--- a/layouts/tokens/list.html
+++ b/layouts/tokens/list.html
@@ -14,35 +14,39 @@
 </div>
 
 <div class="container tokens">
-
   <table class="token-table table table-responsive table-striped table-hover">
     <thead>
       <tr>
         <th>Token</th>
         <th>Year</th>
-        <th>Market Cap*</th>
-        <th>Price USD</th>
+        <th>Market Cap</th>
+        <th>Price</th>
         <th>Industry</th>
         <th>Type</th>
         <th>Description</th>
       </tr>
     </thead>
     <tbody>
+
+    	{{ $dataTokens := getJSON "https://api.coinmarketcap.com/v1/ticker/" }}
       {{ range $.Site.Data.tokens }}
-        <tr>
-          <td class="token-name" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "token-logos/%s.png" .name | urlize) }}');"><span class="label-emphasis">{{ .name }}</span></td>
-          <td>{{ .year }}</td>
-          <td class="label-emphasis">{{ .marketCap }}</td>
-          <td class="label-emphasis">{{ .priceUsd }}</td>
-          <td>{{ .industry }}</td>
-          <td>{{ .type }}</td>
-          <td class="token-description">{{ .description }}</td>
-        </tr>
+	        <tr>
+	          <td class="token-name" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "token-logos/%s.png" .name | urlize) }}');"><span class="label-emphasis">{{ .name }}</span></td>
+	          <td>{{ .year }}</td>
+	          {{ range where $dataTokens "name" .name }}
+	          	<td class="label-emphasis">${{ lang.NumFmt 0 .market_cap_usd }}</td>
+	          	<td class="label-emphasis">${{ lang.NumFmt 2 .price_usd }}</td>
+	          {{ else }}
+	          	<td class="label-emphasis">N/A</td>
+	          	<td class="label-emphasis">N/A</td>
+          	{{ end }}
+	          <td>{{ .industry }}</td>
+	          <td>{{ .type }}</td>
+	          <td class="token-description">{{ .description }}</td>
+	        </tr>
       {{ end }}
     </tbody>
   </table>
-  <!-- <p class="token-sales-disclaimer">We have an internal selection process to filter unattractive Tokensales.<br>
-  Listing is not endorsement - not to be considered as investment advice.</p> -->
 
 </div>
 {{ end }}
