redesigns premium page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,7 @@
   <div class="banner-content">
     <h1>{{ .Title }}</h1>
     <p>{{ .Description }}</p>
+    <p>Subscribe to our newsletter and get a free ICO report</p>
     {{ partial "newsletter-inline-form" . }}
   </div>
 </div>
