--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -18,7 +18,7 @@
 							<h3>
 							{{ .Title }}
 							{{ range .Params.categories }}
-								<div class="btn btn-outline-warning btn-sm float-right mx-2">{{ . }}</div>
+								<div class="btn btn-warning btn-sm float-right mx-2">{{ . }}</div>
 							{{ end }}
 							</h3>
 							<p>{{ .Date.Format "January 2, 2006" }}</p>
