--- a/src/scss/components/_news-sidebar.scss
+++ b/src/scss/components/_news-sidebar.scss
@@ -4,6 +4,11 @@
 	padding-top: 40px;
 	text-align: center;
 
+	.newsletter-form {
+		padding: 40px;
+		background: #2c3e50;
+	}
+
 	.social-links {
 		margin-top: 20px;
 
