--- a/layouts/exchanges/list.html
+++ b/layouts/exchanges/list.html
@@ -61,6 +61,7 @@
     {{ end }}
   </div>
 </div>
+{{ partial "newsletter-bleed" . }}
 {{ end }}
 
 {{ define "footer"}} {{ partial "footer" .}} {{end}}
