--- a/layouts/news/list.html
+++ b/layouts/news/list.html
@@ -22,8 +22,11 @@
   	<div class="col-lg-4 col-md-12">
 			<div class="news-sidebar">
 	  		<div class="newsletter-box">
-					<div class="font-weight-bold">Get the hottest crypto news and insights</div>
-					{{ partial "newsletter-form" . }}
+					<p class="font-weight-bold">Get the hottest crypto news and insights</p>
+					<p class="font-weight-bold">Free ICO reports</p>
+					<div class="newsletter-form">
+						{{ partial "newsletter-form" . }}
+					</div>
 				</div>
 	  		<div class="social-links d-flex justify-content-around">
 					<a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/telegram.svg" }}"></a>
@@ -32,7 +35,7 @@
 	  		</div>
 	  		<div class="categories">
 				  {{ range ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
-				  	<a href="{{ .URL }}" class="btn btn-outline-warning m-1">{{ .Title}}</a>
+				  	<a href="{{ .URL }}" class="btn btn-warning m-1">{{ .Title}}</a>
 				  {{ end }}
 				</div>
 			</div>
