--- a/layouts/premium/single.html
+++ b/layouts/premium/single.html
@@ -9,34 +9,82 @@
   		<div class="col-xs-12 col-lg-4">
   			<div class="premium-pack economy-pack d-flex flex-column justify-content-around align-items-center mb-3">
   				<h2>Economy</h2>
-  				<div class="price-details">
-						<h3>$49<span>/month</span></h3>
+  				<p class="highlight">7/7 crytpo analyst</p>
+  				<ul>
+						<li>Live crypto walkthrough</li>
+						<li>Portfolio design</li>
+					</ul>
+				  <a data-toggle="collapse" href="#collapseEconomy" aria-expanded="false" aria-controls="collapseEconomy">
+				    <i class="fa fa-chevron-circle-down" aria-hidden="true"></i> See more
+				  </a>
+					<div class="collapse" id="collapseEconomy">
+						<ul>
+							<li>Live support on chat from our dedicated analysts team</li>
+							<li>Introduction to bitcoin, blockchain and cryptocurrency</li>
+							<li>Select the exchange that best fits your needs and profile</li>
+							<li>Get to know how to stay safe and protect your assets from attackers</li>
+							<li>Build your portfolio based on your expected returns, timeline and risk</li>
+						</ul>
+					</div>
+					<div class="price-details">
+						<h3>$149</h3>
 						<p class="small">3 months</p>
   				</div>
-  				<p>First steps in the crypto world</p>
-  				<div class="btn btn-info btn-lg">Book</div>
+  				<div class="btn btn-info btn-lg mb-3">Book</div>
   			</div>
   		</div>
   		<div class="col-xs-12 col-lg-4">
   			<div class="premium-pack business-pack d-flex flex-column justify-content-around align-items-center mb-3">
   				<h2>Business</h2>
-  				<div class="price-details">
-						<h3>$39<span>/month</span></h3>
+  				<p class="highlight">All economy features</p>
+  				<ul>
+						<li>10 ICO reports / month</li>
+						<li>Crytpo 102 content</li>
+					</ul>
+				  <a data-toggle="collapse" href="#collapseBusiness" aria-expanded="false" aria-controls="collapseBusiness">
+				    <i class="fa fa-chevron-circle-down" aria-hidden="true"></i> See more
+				  </a>
+					<div class="collapse" id="collapseBusiness">
+						<ul>
+							<li>10 ICO reports per month to get the full picture</li>
+							<li>Crypto 102 reports</li>
+							<li>Fundamentals of tokens, ICOs and crypto investment</li>
+							<li>Purchase goods stealthily on online marketplaces</li>
+							<li>Build your Do It Yourself cold wallet</li>
+						</ul>
+					</div>
+					<div class="price-details">
+						<h3>$239</h3>
 						<p class="small">6 months</p>
   				</div>
-  				<p>Become crypto-educated</p>
-  				<div class="btn btn-warning btn-lg">Book</div>
+  				<div class="btn btn-warning btn-lg mb-3">Book</div>
   			</div>
   		</div>
   		<div class="col-xs-12 col-lg-4">
   			<div class="premium-pack first-class-pack d-flex flex-column justify-content-around align-items-center mb-3">
   				<h2>First Class</h2>
-  				<div class="price-details">
-						<h3>$29<span>/month</span></h3>
+  				<p class="highlight">All business features</p>
+  				<ul>
+						<li>All our ICO reports</li>
+						<li>Fast-track and high priority</li>
+					</ul>
+				  <a data-toggle="collapse" href="#collapseFirstClass" aria-expanded="false" aria-controls="collapseFirstClass">
+				    <i class="fa fa-chevron-circle-down" aria-hidden="true"></i> See more
+				  </a>
+					<div class="collapse" id="collapseFirstClass">
+						<ul>
+							<li>All our ICO reports per month (minimum 20)</li>
+							<li>Fast check-in and high priority customer</li>
+							<li>First access to all our premium content</li>
+							<li>Alpha testing of tropyc bot</li>
+							<li>Invitation to tropyc community lounge</li>
+						</ul>
+					</div>
+					<div class="price-details">
+						<h3>$359</h3>
 						<p class="small">12 months</p>
   				</div>
-  				<p>The new way of investing</p>
-  				<div class="btn btn-danger btn-lg">Book</div>
+  				<div class="btn btn-danger btn-lg mb-3">Book</div>
   			</div>
   		</div>
   	</div>
@@ -49,34 +97,19 @@
 			<div class="col-xs-12 col-lg-4">
 					<div class="featurebox">
 						<img src="/images/{{ index $.Site.Data.images.hash "landing-page/chat.svg" }}">
-						<h2>7/7 Chat</h2>
-						<ul>
-							<li>Live cryptocurrency analyst</li>
-							<li>Find your best exchange</li>
-							<li>Screenshot walkthroughs</li>
-						</ul>
+						<p>7/7 support and live chat with cryptocurrency analysts</p>
 					</div>
 			</div>
 			<div class="col-xs-12 col-lg-4">
 					<div class="featurebox">
 						<img src="/images/{{ index $.Site.Data.images.hash "landing-page/star.svg" }}">
-						<h2>Learn</h2>
-						<ul>
-							<li>Ins and outs of crypto</li>
-							<li>Safety and best practises</li>
-							<li>News and alerts</li>
-						</ul>
+						<p>Portfolio design and setting up your digital vault</p>
 					</div>
 			</div>
 			<div class="col-xs-12 col-lg-4">
 					<div class="featurebox">
 						<img src="/images/{{ index $.Site.Data.images.hash "landing-page/light-bulb.svg" }}">
-						<h2>Invest</h2>
-						<ul>
-							<li>Crypto fundamentals</li>
-							<li>Customised portfolio design</li>
-							<li>ICO rating reports</li>
-						</ul>
+						<p>Customised classes on bitcoin, crypto and blockchain</p>
 					</div>
 			</div>
 		</div>
