changes to premium pack list

--- a/layouts/premium/single.html
+++ b/layouts/premium/single.html
@@ -11,26 +11,26 @@
   				<h2>Economy</h2>
   				<p class="highlight">7/7 crytpo analyst</p>
   				<ul>
-						<li>Live crypto walkthrough</li>
-						<li>Portfolio design</li>
+						<li>- Live crypto walkthrough</li>
+						<li>- Portfolio design</li>
 					</ul>
 				  <a data-toggle="collapse" href="#collapseEconomy" aria-expanded="false" aria-controls="collapseEconomy">
 				    <i class="fa fa-chevron-circle-down" aria-hidden="true"></i> See more
 				  </a>
 					<div class="collapse" id="collapseEconomy">
-						<ul>
-							<li>Live support on chat from our dedicated analysts team</li>
-							<li>Introduction to bitcoin, blockchain and cryptocurrency</li>
-							<li>Select the exchange that best fits your needs and profile</li>
-							<li>Get to know how to stay safe and protect your assets from attackers</li>
-							<li>Build your portfolio based on your expected returns, timeline and risk</li>
+						<ul class="collapsed-list">
+							<li>- Live support on chat from our dedicated analysts team</li>
+							<li>- Introduction to bitcoin, blockchain and cryptocurrency</li>
+							<li>- Select the exchange that best fits your needs and profile</li>
+							<li>- Get to know how to stay safe and protect your assets from attackers</li>
+							<li>- Build your portfolio based on your expected returns, timeline and risk</li>
 						</ul>
 					</div>
 					<div class="price-details">
 						<h3>$149</h3>
 						<p class="small">3 months</p>
   				</div>
-  				<div class="btn btn-info btn-lg mb-3">Book</div>
+  				<div class="btn btn-info btn-lg font-weight-bold mb-3">Book</div>
   			</div>
   		</div>
   		<div class="col-xs-12 col-lg-4">
@@ -38,26 +38,25 @@
   				<h2>Business</h2>
   				<p class="highlight">All economy features</p>
   				<ul>
-						<li>10 ICO reports / month</li>
-						<li>Crytpo 102 content</li>
+						<li>- 10 ICO reports / month</li>
+						<li>- Crytpo 102 content</li>
 					</ul>
 				  <a data-toggle="collapse" href="#collapseBusiness" aria-expanded="false" aria-controls="collapseBusiness">
 				    <i class="fa fa-chevron-circle-down" aria-hidden="true"></i> See more
 				  </a>
 					<div class="collapse" id="collapseBusiness">
-						<ul>
-							<li>10 ICO reports per month to get the full picture</li>
-							<li>Crypto 102 reports</li>
-							<li>Fundamentals of tokens, ICOs and crypto investment</li>
-							<li>Purchase goods stealthily on online marketplaces</li>
-							<li>Build your Do It Yourself cold wallet</li>
+						<ul class="collapsed-list">
+							<li>- 10 ICO reports per month to get the full picture</li>
+							<li>- Fundamentals of tokens, ICOs and crypto investment</li>
+							<li>- Purchase goods stealthily on online marketplaces</li>
+							<li>- Build your Do It Yourself cold wallet</li>
 						</ul>
 					</div>
 					<div class="price-details">
 						<h3>$239</h3>
 						<p class="small">6 months</p>
   				</div>
-  				<div class="btn btn-warning btn-lg mb-3">Book</div>
+  				<div class="btn btn-warning btn-lg font-weight-bold mb-3">Book</div>
   			</div>
   		</div>
   		<div class="col-xs-12 col-lg-4">
@@ -65,26 +64,26 @@
   				<h2>First Class</h2>
   				<p class="highlight">All business features</p>
   				<ul>
-						<li>All our ICO reports</li>
-						<li>Fast-track and high priority</li>
+						<li>- All our ICO reports</li>
+						<li>- Fast-track and high priority</li>
 					</ul>
 				  <a data-toggle="collapse" href="#collapseFirstClass" aria-expanded="false" aria-controls="collapseFirstClass">
 				    <i class="fa fa-chevron-circle-down" aria-hidden="true"></i> See more
 				  </a>
 					<div class="collapse" id="collapseFirstClass">
-						<ul>
-							<li>All our ICO reports per month (minimum 20)</li>
-							<li>Fast check-in and high priority customer</li>
-							<li>First access to all our premium content</li>
-							<li>Alpha testing of tropyc bot</li>
-							<li>Invitation to tropyc community lounge</li>
+						<ul class="collapsed-list">
+							<li>- All our ICO reports per month (minimum 20)</li>
+							<li>- Fast check-in and high priority customer</li>
+							<li>- First access to all our premium content</li>
+							<li>- Alpha testing of tropyc bot</li>
+							<li>- Invitation to tropyc community lounge</li>
 						</ul>
 					</div>
 					<div class="price-details">
 						<h3>$359</h3>
 						<p class="small">12 months</p>
   				</div>
-  				<div class="btn btn-danger btn-lg mb-3">Book</div>
+  				<div class="btn btn-danger btn-lg font-weight-bold mb-3">Book</div>
   			</div>
   		</div>
   	</div>
