--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -10,7 +10,7 @@
 .banner h1 {
   font-size: 50px;
   font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  text-shadow: 0px 4px 4px rgba(0,0,0,0.4)
 }
 .banner p {
   font-size: 25px;
