--- a/src/scss/pages/_landing.scss
+++ b/src/scss/pages/_landing.scss
@@ -30,55 +30,92 @@
     	text-align: center;
 	    letter-spacing: 0.1em;
 	    margin-top: 15px;
-	    font-weight: 500;
 	    font-size: 15px;
     }
   }
 }
 
-.title {
-  margin-top: 70px;
-  display: flex;
-  width: 100%;
+// .title {
+//   margin-top: 70px;
+//   display: flex;
+//   width: 100%;
 
-  .titleborder {
-  	flex: 1;
-    border-top: 1px solid #EEE;
-    margin-top: 8px;
-  }
+//   .titleborder {
+//   	flex: 1;
+//     border-top: 1px solid #EEE;
+//     margin-top: 8px;
+//   }
 
-  .titlelabel {
-  	line-height: 20px;
-  	margin: 0 20px;
-  	text-transform: uppercase;
-    color: #787878;
-    letter-spacing: 0.1em;
-    font-weight: 500;
-    font-size: 15px;
-  }
-}
+//   .titlelabel {
+//   	line-height: 20px;
+//   	margin: 0 20px;
+//   	text-transform: uppercase;
+//     color: #787878;
+//     letter-spacing: 0.1em;
+//     font-weight: 500;
+//     font-size: 15px;
+//   }
+// }
 
 .instructions, .funding-comparison {
-	margin-top: 60px;
+	margin-top: 90px;
 	margin-bottom: 90px;
 }
 
+.instructions {
+	background: $brand-primary;
+	padding-top: 2rem;
+
+	h2 {
+		color: #FFF;
+		text-align: center;
+		font-size: 3rem;
+		margin-bottom: 2rem;
+	}
+
+	h3, p {
+		color: #FFF;
+	}
+
+	.step:last-child {
+		margin-bottom: 50px;
+	}
+}
+
+.funding-comparison {
+
+	h2 {
+		text-align: center;
+
+		.red {
+			color: $red;
+		}
+
+		.green {
+			color: $green;
+		}
+	}
+
+	p {
+		text-align: center;
+		font-weight: 500;
+	}
+}
+
 .step, .point {
-	margin-top: 30px;
 	max-width: 400px;
 
 	h3 {
-    text-transform: uppercase;
-    color: $brand-primary;
-    letter-spacing: 0.1em;
-    margin-top: 15px;
+		font-size: 2rem;
+    letter-spacing: 0.05em;
+    margin: 15px 0;
     font-weight: 500;
-    font-size: 15px;
 	}
 
 	p {
 		margin: 10px 0;
-		font-size: 16px;
-		line-height: 1.6;
+		font-size: 1.1rem;
+		font-weight: 300;
+		text-align: justify;
 	}
 }
