--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,6 +38,7 @@
   {{ partial "favicon" . }}
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="/css/{{ index .Site.Data.css.hash "main.css" }}" />
 
 
@@ -51,7 +52,7 @@
   <script src="https://cdn.bootcss.com/popper.js/1.9.3/umd/popper.min.js" integrity="sha384-knhBOwpf8/28D6ygAjJeb0STNDZqfPbKaWQ8wIz/xgSc0xXwKsKhNype8fmfMka2" crossorigin="anonymous"></script>
   <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
   <script src="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-  <script src="/js/{{ index .Site.Data.js.hash "tocbot.js" }}" type="text/javascript"></script>
+  <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="YmFlYWM4ZTQtMWU4YS00Yzc2LTlkZGMtNjdlYjZiNGFmNTgzNjM2NDA0ODY1NDY3ODc1NjE2"></script>
   <script src="/js/{{ index .Site.Data.js.hash "main.js" }}" type="text/javascript"></script>
   </script>
 </body>
