--- a/layouts/premium/single.html
+++ b/layouts/premium/single.html
@@ -30,7 +30,16 @@
 						<h3>$149</h3>
 						<p class="small">3 months</p>
   				</div>
-  				<div class="btn btn-info btn-lg font-weight-bold mb-3">Book</div>
+  				<button
+					    class="snipcart-add-item btn btn-info btn-lg font-weight-bold mb-3"
+					    data-item-id="1"
+					    data-item-name="Economy Ticket"
+					    data-item-price="149.00"
+					    data-item-weight="10"
+					    data-item-url="https://tropyc-staging.netlify.com/premium"
+					    data-item-description="Tropyc Premium Subscription - Economy Ticket">
+					        BOOK
+					</button>
   			</div>
   		</div>
   		<div class="col-xs-12 col-lg-4">
@@ -56,7 +65,16 @@
 						<h3>$239</h3>
 						<p class="small">6 months</p>
   				</div>
-  				<div class="btn btn-warning btn-lg font-weight-bold mb-3">Book</div>
+  				<button
+					    class="snipcart-add-item btn btn-warning btn-lg font-weight-bold mb-3"
+					    data-item-id="2"
+					    data-item-name="Business Ticket"
+					    data-item-price="239.00"
+					    data-item-weight="20"
+					    data-item-url="https://tropyc-staging.netlify.com/premium"
+					    data-item-description="Tropyc Premium Subscription - Business Ticket">
+					        BOOK
+					</button>
   			</div>
   		</div>
   		<div class="col-xs-12 col-lg-4">
@@ -83,7 +101,16 @@
 						<h3>$359</h3>
 						<p class="small">12 months</p>
   				</div>
-  				<div class="btn btn-danger btn-lg font-weight-bold mb-3">Book</div>
+  				<button
+					    class="snipcart-add-item btn btn-danger btn-lg font-weight-bold mb-3"
+					    data-item-id="3"
+					    data-item-name="First Class Ticket"
+					    data-item-price="359.00"
+					    data-item-weight="30"
+					    data-item-url="https://tropyc-staging.netlify.com/premium"
+					    data-item-description="Tropyc Premium Subscription - First Class Ticket">
+					        BOOK
+					</button>
   			</div>
   		</div>
   	</div>
