changes jquery version to include ajax, changes to premium page

--- a/layouts/premium/single.html
+++ b/layouts/premium/single.html
@@ -38,7 +38,7 @@
 					    data-item-weight="10"
 					    data-item-url="https://tropyc-staging.netlify.com/premium"
 					    data-item-description="Tropyc Premium Subscription - Economy Ticket">
-					        BOOK
+					    <i class="fa fa-paper-plane" aria-hidden="true"></i> BOOK
 					</button>
   			</div>
   		</div>
@@ -73,7 +73,7 @@
 					    data-item-weight="20"
 					    data-item-url="https://tropyc-staging.netlify.com/premium"
 					    data-item-description="Tropyc Premium Subscription - Business Ticket">
-					        BOOK
+					    <i class="fa fa-plane" aria-hidden="true"></i> BOOK
 					</button>
   			</div>
   		</div>
@@ -109,7 +109,7 @@
 					    data-item-weight="30"
 					    data-item-url="https://tropyc-staging.netlify.com/premium"
 					    data-item-description="Tropyc Premium Subscription - First Class Ticket">
-					        BOOK
+					    <i class="fa fa-fighter-jet" aria-hidden="true"></i> BOOK
 					</button>
   			</div>
   		</div>
