adds bitcoin payment buttons and updates premium features text

--- a/layouts/premium/single.html
+++ b/layouts/premium/single.html
@@ -11,7 +11,7 @@
   				<h2>Economy</h2>
   				<p class="highlight">7/7 crytpo analyst</p>
   				<ul>
-						<li>- Live crypto walkthrough</li>
+						<li>- Live chat support</li>
 						<li>- Portfolio design</li>
 					</ul>
 				  <a data-toggle="collapse" href="#collapseEconomy" aria-expanded="false" aria-controls="collapseEconomy">
@@ -19,11 +19,9 @@
 				  </a>
 					<div class="collapse" id="collapseEconomy">
 						<ul class="collapsed-list">
-							<li>- Live support on chat from our dedicated analysts team</li>
-							<li>- Introduction to bitcoin, blockchain and cryptocurrency</li>
-							<li>- Select the exchange that best fits your needs and profile</li>
-							<li>- Get to know how to stay safe and protect your assets from attackers</li>
-							<li>- Build your portfolio based on your expected returns, timeline and risk</li>
+							<li>- Introduction to crypto and bitcoin</li>
+							<li>- Purchase, manage and secure your assets</li>
+							<li>- Customised portfolio - your risk, timeline and expected returns</li>
 						</ul>
 					</div>
 					<div class="price-details">
@@ -40,6 +38,7 @@
 					    data-item-description="Tropyc Premium Subscription - Economy Ticket">
 					    <i class="fa fa-paper-plane" aria-hidden="true"></i> BOOK
 					</button>
+					<a target="_blank" class="mb-3" rel="nofollow" href="https://coingate.com/pay/tropyc-economy"><img alt="CoinGate Payment Button" src="https://static.coingate.com/images/buttons/1.png" /></a>
   			</div>
   		</div>
   		<div class="col-xs-12 col-lg-4">
@@ -55,14 +54,13 @@
 				  </a>
 					<div class="collapse" id="collapseBusiness">
 						<ul class="collapsed-list">
-							<li>- 10 ICO reports per month to get the full picture</li>
-							<li>- Fundamentals of tokens, ICOs and crypto investment</li>
-							<li>- Purchase goods stealthily on online marketplaces</li>
-							<li>- Build your Do It Yourself cold wallet</li>
+							<li>- Detailed analysis of upcoming ICOs</li>
+							<li>- Fundamentals of tokens investment</li>
+							<li>- DIY cold wallet and Darkweb marketplace tutorials</li>
 						</ul>
 					</div>
 					<div class="price-details">
-						<h3>$239</h3>
+						<h3>$249</h3>
 						<p class="small">6 months</p>
   				</div>
   				<button
@@ -75,6 +73,7 @@
 					    data-item-description="Tropyc Premium Subscription - Business Ticket">
 					    <i class="fa fa-plane" aria-hidden="true"></i> BOOK
 					</button>
+					<a target="_blank" class="mb-3" rel="nofollow" href="https://coingate.com/pay/tropyc-business"><img alt="CoinGate Payment Button" src="https://static.coingate.com/images/buttons/1.png" /></a>
   			</div>
   		</div>
   		<div class="col-xs-12 col-lg-4">
@@ -83,22 +82,20 @@
   				<p class="highlight">All business features</p>
   				<ul>
 						<li>- All our ICO reports</li>
-						<li>- Fast-track and high priority</li>
+						<li>- Fast-track check-in</li>
 					</ul>
 				  <a data-toggle="collapse" href="#collapseFirstClass" aria-expanded="false" aria-controls="collapseFirstClass">
 				    <i class="fa fa-chevron-circle-down" aria-hidden="true"></i> See more
 				  </a>
 					<div class="collapse" id="collapseFirstClass">
 						<ul class="collapsed-list">
-							<li>- All our ICO reports per month (minimum 20)</li>
-							<li>- Fast check-in and high priority customer</li>
-							<li>- First access to all our premium content</li>
-							<li>- Alpha testing of tropyc bot</li>
-							<li>- Invitation to tropyc community lounge</li>
+							<li>- Mini 20 ICO reports per month</li>
+							<li>- High priority customer</li>
+							<li>- Alpha testing of tropyc 2.0</li>
 						</ul>
 					</div>
 					<div class="price-details">
-						<h3>$359</h3>
+						<h3>$399</h3>
 						<p class="small">12 months</p>
   				</div>
   				<button
@@ -111,6 +108,7 @@
 					    data-item-description="Tropyc Premium Subscription - First Class Ticket">
 					    <i class="fa fa-fighter-jet" aria-hidden="true"></i> BOOK
 					</button>
+					<a target="_blank" class="mb-3" rel="nofollow" href="https://coingate.com/pay/tropyc-first-class"><img alt="CoinGate Payment Button" src="https://static.coingate.com/images/buttons/1.png" /></a>
   			</div>
   		</div>
   	</div>
@@ -123,19 +121,19 @@
 			<div class="col-xs-12 col-lg-4">
 					<div class="featurebox">
 						<img src="/images/{{ index $.Site.Data.images.hash "landing-page/chat.svg" }}">
-						<p>7/7 support and live chat with cryptocurrency analysts</p>
+						<p>7/7 chat support with screenshots</p>
 					</div>
 			</div>
 			<div class="col-xs-12 col-lg-4">
 					<div class="featurebox">
 						<img src="/images/{{ index $.Site.Data.images.hash "landing-page/star.svg" }}">
-						<p>Portfolio design and setting up your digital vault</p>
+						<p>Design your portfolio and set up your digital vault</p>
 					</div>
 			</div>
 			<div class="col-xs-12 col-lg-4">
 					<div class="featurebox">
 						<img src="/images/{{ index $.Site.Data.images.hash "landing-page/light-bulb.svg" }}">
-						<p>Customised classes on bitcoin, crypto and blockchain</p>
+						<p>Customised classes and news on Bitcoin, crypto and blockchain</p>
 					</div>
 			</div>
 		</div>
