--- a/layouts/exchanges/list.html
+++ b/layouts/exchanges/list.html
@@ -20,7 +20,7 @@
       	<div class="card-header">
     			<div class="exchange-logo" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "exchange-logos/%s.png" .name | urlize) }}')"></div>
     			<h2 class="text-center">{{ .name }}</h2>
-    			<div class="corner-text" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "exchange-feature/%s.png" .cornerIcon | urlize) }}')">
+    			<div class="corner-text" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "exchange-feature/%s.svg" .cornerIcon | urlize) }}')">
    				{{ .cornerText }}
    				</div>
       	</div>
