--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -100,7 +100,7 @@ $pink:   #ff5b77 !default;
 $purple: #9b59b6 !default;
 
 // Create grayscale
-$gray-dark:                 #292b2c !default;
+$gray-dark:                 #353536 !default;
 $gray:                      #464a4c !default;
 $gray-light:                #636c72 !default;
 $gray-lighter:              #eceeef !default;
