--- a/layouts/token-sales/list.html
+++ b/layouts/token-sales/list.html
@@ -31,7 +31,7 @@
     <tbody>
       {{ range .Data.Pages.ByParam "endDate" }}
         <tr>
-          <td class="token-name" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "token-logos/%s.png" .Params.name | urlize) }}');"><a href="{{ .URL }}" class="label-emphasis">{{ .Params.name }}</a></td>
+          <td class="token-name" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "token-logos/%s.png" .Title | urlize) }}');"><a href="{{ .URL }}" class="label-emphasis">{{ .Title }}</a></td>
           <td class="text-uppercase">{{ .Params.trustRating }}</td>
           <td class="text-uppercase">{{ .Params.dealRating }}</td>
           <td>{{ .Params.hardCap }}</td>
