--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -8,10 +8,12 @@
 .content {
 	>h2:not(:first-child) {
     margin-top: 3rem;
+    margin-bottom: 1rem;
   }
 
   >h3 {
     margin-top: 1.5rem;
+    margin-bottom: 1rem;
   }
 
   p {
